[CORE] Cleanup after OpenRewrite had its way
Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>